  without deprecation. You should use mw.Title.getExtension() and prepend
  the dot if need be.
* Removed HookContainer::getOriginalHooksForTest() without deprecation.
  This method was introduced in 1.35 for internal use, and appears unused
  outside of MediaWiki core.
* ParserCache::__construct() now requires three parameters.
* Message->getFormat(), deprecated in 1.29, has been removed.
* …

=== Deprecations in 1.36 ===
* LocalFile::recordUpload2, soft deprecated in 1.35, now emits deprecation
  warnings. Use ::recordUpload3 instead.
* The User class, which was marked as @newable in 1.35, is no longer newable,
  meaning that it is no longer safe to manually call the constructor via
  `new User`. Instead, use the UserFactory service.
* Use of the `preprocessor=Preprocessor_DOM` option in parser test files has
  been deprecated.  Preprocessor_DOM was removed in 1.35.
* ParserOptions::setTidy() has been deprecated.  It has had no effect since
  1.35.
* Sanitizer::escapeIdReferenceList() has been deprecated; it will eventually
  be made private to the class, as it appears to have no uses outside the
  Sanitizer class.
* Sanitizer::hackDocType() is deprecated; it will eventually be made private.
* Skin::getIndicatorsHTML() is deprecated. The functionality can be retained
  by reimplementing the method using the raw indicators data from
  OutputPage::getIndicators.
* Skin::makeVariablesScript() has been deprecated. Use
  ResourceLoader::makeInlineScript() instead.
* The PageProps class was converted to a service. PageProps::overrideInstance
  was deprecated, and MediaWikiServices::redefineService should be used
  instead.
* Title::nameOf() is deprecated; use Title::newFromID()->getPrefixedDBkey()
  instead.
* DatabaseBlock::insert, DatabaseBlock::update, DatabaseBlock::purgeExpired and
  DatabaseBlock::delete are deprecated. Use DatabaseBlockStore::insertBlock,
  DatabaseBlockStore::updateBlock, DatabaseBlockStore::purgeExpiredBlocks and